[package]
name = "stm32rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# optimize for speed = 0, 1, 2 ,3
# optimize for size = 'z' or 's'
opt-level = 'z'


[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
embedded-hal = "^0.2.4"
panic-halt = "^0.2.0"

[dependencies.stm32f1xx-hal]
version = "^0.6.1"
features = ["stm32f103", "rt", "medium"]
